--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             margin-bottom: 40px;
         }
         .result-fields {
-            display: flex;
+            display: fix;
             flex-direction: column;
             align-items: left;
             margin-top: 10px;
