--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 </div>
             </div>
         </div>
+        <h4>Esta APP solo funciona con la red de la Institución</h4>
     </div>
 
     <script>
