--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         h1 {
             color: #2c3e50;
         }
+        h4 {
+            color: #2c3e50;
+        }
         input, button {
             padding: 10px;
             margin: 10px 0;
