--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         }
         h4 {
             color: #2c3e50;
+            font: normal;
         }
         input, button {
             padding: 10px;
