--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         h4 {
             color: #2c3e50;
             font: normal;
+            font-size: 10px;
         }
         input, button {
             padding: 10px;
