--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 
     <div class="container">
-        <img src="https://www.google.com/imgres?q=hospital%20regional%20de%20ayacucho%20logo&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100064729504618&imgrefurl=https%3A%2F%2Fwww.facebook.com%2FHOSPITALAREGIONALDEAYACUCHO%2F&docid=s3MJKzQvMDa_QM&tbnid=t7LjVLJI40QE6M&vet=12ahUKEwj1vb375b-HAxXCvJUCHb7aAbcQM3oECBgQAA..i&w=2048&h=2048&hcb=2&ved=2ahUKEwj1vb375b-HAxXCvJUCHb7aAbcQM3oECBgQAA" alt="Hospital Regional de Ayacucho" >
+        <img src="https://app.hrayacucho.gob.pe/sistema/Assets/images/logohra.png" alt="Hospital Regional de Ayacucho" >
         <h1>Consulta de DNI</h1>
         <input type="text" id="txtDocumento" placeholder="Ingrese DNI" />
         <button id="btnBuscar">Buscar</button>
