--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 
     <div class="container">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fapp.hrayacucho.gob.pe%2Fsistema%2Fview%2Fconvocatoria&psig=AOvVaw07sK-HFRNbiWjneQtzbR0f&ust=1721915020671000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCOjUk8Lnv4cDFQAAAAAdAAAAABAE" alt="Hospital Regional de Ayacucho" >
+        <img src="\Img01.png" alt="Hospital Regional de Ayacucho" >
         <h1>Consulta de DNI</h1>
         <input type="text" id="txtDocumento" placeholder="Ingrese DNI" />
         <button id="btnBuscar">Buscar</button>
