--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 
     <div class="container">
-        <img src="\Img01.png" alt="Hospital Regional de Ayacucho" >
+        <img src="APPConsultaD\Img01.png" alt="Hospital Regional de Ayacucho" >
         <h1>Consulta de DNI</h1>
         <input type="text" id="txtDocumento" placeholder="Ingrese DNI" />
         <button id="btnBuscar">Buscar</button>
