--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         h1 {
             color: #2c3e50;
         }
+        h3 {
+            color: #5E2B95;
+        }
         h4 {
             color: #2c3e50;
             font: normal;
@@ -87,7 +90,7 @@
 <body>
 
     <div class="container">
-        <h1 font-color:#5E2B95 >"Hospital Regional de Ayacucho"</h1>
+        <h3>"Hospital Regional de Ayacucho"</h3>
         <h1>Consulta de DNI</h1>
         <input type="text" id="txtDocumento" placeholder="Ingrese DNI" />
         <button id="btnBuscar">Buscar</button>
