--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             color: #2c3e50;
         }
         h3 {
-            color: #5E2B95;
+            font-color: #5E2B95;
         }
         h4 {
             color: #2c3e50;
