--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         }
         h3 {
             font-color: #5E2B95;
+            font-size: 14px;
         }
         h4 {
             color: #2c3e50;
