--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 
     <div class="container">
-        <h1>Consulta de DNI</h1>
+        <h1>Consulta de Documento</h1>
         <input type="text" id="txtDocumento" placeholder="Ingrese DNI" />
         <button id="btnBuscar">Buscar</button>
         <button id="btnLimpiar">Limpiar</button>
