--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         h4 {
             color: #2c3e50;
-            font-type: italic;
+            font-style: italic;
             font-size: 10px;
         }
         input, button {
