--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
                 
             </div>
-            <h4>Esta APP solo funciona con la red de la Institución</h4>
+            <h4>* Esta APP solo funciona con la red de la Institución</h4>
         </div>
         
     </div>
