--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div>
                     <strong>Sexo:</strong>
-                    <span id="txtSexo"></span>
+                    <span id="txtSexo" tab-size: 4></span>
                 </div>
                 
             </div>
