--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         }
         .result-fields strong {
             margin-right: 10px;
+            tab-size: 4;
         }
     </style>
 </head>
@@ -108,7 +109,7 @@
                 </div>
                 <div>
                     <strong>Sexo:</strong>
-                    <span id="txtSexo" tab-size: 4></span>
+                    <span id="txtSexo"></span>
                 </div>
                 
             </div>
