--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
         .result-fields strong {
             margin-right: 10px;
             tab-size: 4;
+            display: inline-block;
+            margin-left: 40px;
         }
     </style>
 </head>
