--- a/index.html
+++ b/index.html
@@ -80,9 +80,6 @@
         }
         .result-fields strong {
             margin-right: 10px;
-            tab-size: 4;
-            display: inline-block;
-            margin-left: 40px;
         }
     </style>
 </head>
@@ -111,7 +108,9 @@
                 </div>
                 <div>
                     <strong>Sexo:</strong>
-                    <span id="txtSexo"></span>
+                    <span id="txtSexo" tab-size: 4;
+            display: inline-block;
+            margin-left: 40px;></span>
                 </div>
                 
             </div>
