--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             flex-direction: column;
             align-items: left;
             margin-top: 10px;
+            tab-size: 4;
+            display: inline-block;
+            margin-left: 40px;
         }
         .result-fields div {
             display: flex;
@@ -108,9 +111,7 @@
                 </div>
                 <div>
                     <strong>Sexo:</strong>
-                    <span id="txtSexo" tab-size: 4;
-            display: inline-block;
-            margin-left: 40px;></span>
+                    <span id="txtSexo"></span>
                 </div>
                 
             </div>
