--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             margin-top: 10px;
         }
         .result-fields div {
-            display: flex;
+            display: fix;
             justify-content: stretch;
             width: 100%;
             margin: 5px 0;
