--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
             margin-top: 10px;
         }
         .result-fields div {
-            display: fix;
+            display: flex;
             justify-content: stretch;
             width: 100%;
             margin: 5px 0;
         }
         .result-fields strong {
-            margin-right: 10px;
+            margin-right: 5px;
         }
     </style>
 </head>
