--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             display: fix;
             flex-direction: column;
             align-items: left;
+            width: 100%;
             margin-top: 10px;
         }
         .result-fields div {
